--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+  <meta charset="UTF-8">
   <title>Clasificador de Dominios</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    input, button {
+      padding: 8px;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    #response {
+      margin-top: 30px;
+      padding: 20px;
+      background-color: #f6f6f6;
+      border-left: 4px solid #007acc;
+    }
+  </style>
 </head>
 <body>
   <h1>Clasificador de Dominios</h1>
+  <p>Ingresa un dominio para ejecutar la automatización de mantenimiento:</p>
   <form id="domain-form">
-    <label for="domain">Ingresa un dominio:</label><br>
-    <input type="text" id="domain" name="domain" required><br><br>
-    <button type="submit">Enviar</button>
+    <input type="text" id="domain" name="domain" placeholder="ej. www.tudominio.com" required>
+    <button type="submit">Analizar</button>
   </form>
 
   <div id="response"></div>
@@ -18,14 +38,25 @@
       e.preventDefault();
       const domain = document.getElementById("domain").value;
 
-      const response = await fetch("https://n8n.tuservidor.com/webhook/dominio", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ domain })
-      });
+      const responseDiv = document.getElementById("response");
+      responseDiv.innerHTML = "Procesando dominio, espera un momento...";
 
-      const result = await response.text(); // Supone que n8n devuelve HTML
-      document.getElementById("response").innerHTML = result;
+      try {
+        const response = await fetch("https://TUN8N/webhook/dominio", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ domain })
+        });
+
+        if (!response.ok) {
+          throw new Error("Error al contactar con n8n.");
+        }
+
+        const result = await response.text(); // HTML que devuelve n8n
+        responseDiv.innerHTML = result;
+      } catch (error) {
+        responseDiv.innerHTML = `<strong>Ocurrió un error:</strong> ${error.message}`;
+      }
     });
   </script>
 </body>
