--- a/index.html
+++ b/index.html
@@ -2,24 +2,45 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Clasificador de Dominios</title>
+  <title>Automatización de Mantenimiento</title>
   <style>
     body {
       font-family: sans-serif;
       max-width: 700px;
       margin: 40px auto;
       padding: 20px;
+      background-color: #f4f4f4;
     }
+
+    h1 {
+      color: #2c3e50;
+    }
+
     input, button {
-      padding: 8px;
+      padding: 10px;
       font-size: 16px;
       margin-top: 10px;
+      width: 100%;
+      box-sizing: border-box;
     }
+
+    button {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
     #response {
       margin-top: 30px;
       padding: 20px;
-      background-color: #f6f6f6;
+      background-color: #fff;
       border-left: 4px solid #007acc;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
   </style>
 </head>
@@ -28,7 +49,7 @@
   <p>Ingresa un dominio para ejecutar la automatización de mantenimiento:</p>
   <form id="domain-form">
     <input type="text" id="domain" name="domain" placeholder="ej. www.tudominio.com" required>
-    <button type="submit">Analizar</button>
+    <button type="submit">Enviar dominio</button>
   </form>
 
   <div id="response"></div>
@@ -37,25 +58,24 @@
     document.getElementById("domain-form").addEventListener("submit", async function(e) {
       e.preventDefault();
       const domain = document.getElementById("domain").value;
-
       const responseDiv = document.getElementById("response");
-      responseDiv.innerHTML = "Procesando dominio, espera un momento...";
+      responseDiv.innerHTML = "⏳ Procesando dominio...";
 
       try {
-        const response = await fetch("https://TUN8N/webhook/dominio", {
+        const response = await fetch("https://n8n.publissoft.com/webhook/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ domain })
         });
 
         if (!response.ok) {
-          throw new Error("Error al contactar con n8n.");
+          throw new Error("No se pudo contactar con el servidor.");
         }
 
-        const result = await response.text(); // HTML que devuelve n8n
+        const result = await response.text(); // Se espera HTML del webhook
         responseDiv.innerHTML = result;
       } catch (error) {
-        responseDiv.innerHTML = `<strong>Ocurrió un error:</strong> ${error.message}`;
+        responseDiv.innerHTML = `<strong>❌ Error:</strong> ${error.message}`;
       }
     });
   </script>
