--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Automatización de Mantenimiento</title>
   <style>
     body {
@@ -11,11 +11,9 @@
       padding: 20px;
       background-color: #f4f4f4;
     }
-
     h1 {
       color: #2c3e50;
     }
-
     input, button {
       padding: 10px;
       font-size: 16px;
@@ -23,24 +21,22 @@
       width: 100%;
       box-sizing: border-box;
     }
-
     button {
       background-color: #007acc;
       color: white;
       border: none;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #005fa3;
     }
-
     #response {
       margin-top: 30px;
       padding: 20px;
       background-color: #fff;
       border-left: 4px solid #007acc;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      white-space: pre-wrap; /* Para que respete saltos de línea */
     }
   </style>
 </head>
@@ -48,7 +44,7 @@
   <h1>Clasificador de Dominios</h1>
   <p>Ingresa un dominio para ejecutar la automatización de mantenimiento:</p>
   <form id="domain-form">
-    <input type="text" id="domain" name="domain" placeholder="ej. www.tudominio.com" required>
+    <input type="text" id="domain" name="domain" placeholder="ej. www.tudominio.com" required />
     <button type="submit">Enviar dominio</button>
   </form>
 
@@ -57,22 +53,28 @@
   <script>
     document.getElementById("domain-form").addEventListener("submit", async function(e) {
       e.preventDefault();
-      const domain = document.getElementById("domain").value;
+      const domain = document.getElementById("domain").value.trim();
       const responseDiv = document.getElementById("response");
-      responseDiv.innerHTML = "⏳ Procesando dominio...";
+
+      if (!domain) {
+        responseDiv.innerHTML = "<strong>Por favor ingresa un dominio válido.</strong>";
+        return;
+      }
+
+      responseDiv.textContent = "⏳ Procesando dominio...";
 
       try {
-        const response = await fetch("https://n8n.publissoft.com/webhook-test/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
+        const response = await fetch("https://n8n.publissoft.com/webhook/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ domain })
         });
 
         if (!response.ok) {
-          throw new Error("No se pudo contactar con el servidor.");
+          throw new Error(`Error HTTP ${response.status} - ${response.statusText}`);
         }
 
-        const result = await response.text(); // Se espera HTML del webhook
+        const result = await response.text();
         responseDiv.innerHTML = result;
       } catch (error) {
         responseDiv.innerHTML = `<strong>❌ Error:</strong> ${error.message}`;
