--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <h1>Clasificador de Dominios</h1>
   <p>Ingresa un dominio para ejecutar la automatización de mantenimiento:</p>
   <form id="domain-form">
-    <input type="text" id="domain" name="domain" placeholder="ej. www.tudominio.com" required />
+    <input type="text" id="domain" name="domain" placeholder="ej. tudominio sin 'www' ni '.com, .ca'" required />
     <button type="submit">Enviar dominio</button>
   </form>
 
