--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
       responseDiv.innerHTML = '<img src="img/loaging.gif" alt="Cargando..." style="width:40px; vertical-align:middle;"> Procesando dominio...';
 
       try {
-        const response = await fetch("https://n8n.publissoft.com/webhook/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
+        const response = await fetch("https://n8n.publissoft.com/webhook-test/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
           method: "POST",
+          signal: AbortSignal.timeout(120000), // 120 segundos (solo navegadores modernos)
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ domain })
         });
