--- a/index.html
+++ b/index.html
@@ -71,62 +71,6 @@
   </form>
 
   <div id="response"></div>
-
-  <!-- <script>
-    document.getElementById("domain-form").addEventListener("submit", async function(e) {
-      e.preventDefault();
-      const domain = document.getElementById("domain").value.trim();
-      const responseDiv = document.getElementById("response");
-
-      if (!domain) {
-        responseDiv.innerHTML = "<strong>Por favor ingresa un dominio válido.</strong>";
-        return;
-      }
-
-      responseDiv.innerHTML = '<img src="img/loaging.gif" alt="Cargando..." style="width:40px; vertical-align:middle;"> Procesando dominio...';
-
-    //   try {
-    //     const response = await fetch("https://n8n.publissoft.com/webhook-test/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
-    //       method: "POST",
-    //       signal: AbortSignal.timeout(120000), // 120 segundos (solo navegadores modernos)
-    //       headers: { "Content-Type": "application/json" },
-    //       body: JSON.stringify({ domain })
-    //     });
-
-    //     if (!response.ok) {
-    //       throw new Error(`Error HTTP ${response.status} - ${response.statusText}`);
-    //     }
-
-    //     const result = await response.text();
-    //     responseDiv.textContent = result;
-    //   } catch (error) {
-    //     responseDiv.innerHTML = `<strong>❌ Error:</strong> ${error.message}`;
-    //   }
-    try {
-  const controller = new AbortController();
-  const timeoutId = setTimeout(() => controller.abort(), 120000); // 120 segundos
-
-  const response = await fetch("https://n8n.publissoft.com/webhook-test/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
-    method: "POST",
-    signal: controller.signal, // Usa el AbortController
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ domain })
-  });
-
-  clearTimeout(timeoutId); // Limpiar el timeout si la respuesta llega
-
-  if (!response.ok) {
-    throw new Error(`Error HTTP ${response.status} - ${response.statusText}`);
-  }
-
-  const result = await response.text();
-  responseDiv.textContent = result;
-} catch (error) {
-  responseDiv.innerHTML = `<strong>❌ Error:</strong> ${error.name === "AbortError" ? "Tiempo de espera agotado (120s)" : error.message}`;
-}
-    });
-  </script> -->
-
   <script>
    document.getElementById("domain-form").addEventListener("submit", async function(e) {
   e.preventDefault();
@@ -150,31 +94,21 @@
 
   try {
     // 1. Enviar solicitud a TU webhook
-    const response = await fetch("https://n8n.publissoft.com/webhook-test/3c6d398e-da6c-4bf1-99f0-ecc8396b1e4c", {
-      method: "POST",
-      headers: { 
-        "Content-Type": "application/json",
-        "X-Request-ID": Math.random().toString(36).substring(7) // ID único para tracking
-      },
-      body: JSON.stringify({ 
-        domain: domain,
-        notifyUrl: "https://tudominio.com/webhook-result" // Opcional para respuesta asíncrona
-      })
-    });
+    const response = await fetch("https://n8n.publissoft.com/webhook-test/procesar-dominio", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ domain }) // ← correcto, no pongas 'dominio'
+  });
 
-    // 2. Manejar respuesta
-    if (!response.ok) {
-      const errorData = await response.json().catch(() => null);
-      throw new Error(errorData?.error || `Error HTTP ${response.status}`);
-    }
+  const result = await response.json();
+  responseDiv.innerHTML = `
+    ✅ Procesando... puedes revisar en unos minutos aquí:<br>
+    <a href="${result.resultUrl}" target="_blank">${result.resultUrl}</a>
+  `;
 
-    const result = await response.json();
-    responseDiv.innerHTML = `
-      <div class="success">
-        <h3>Resultado para ${domain}:</h3>
-        <pre>${JSON.stringify(result, null, 2)}</pre>
-      </div>
-    `;
+
 
   } catch (error) {
     responseDiv.innerHTML = `
